@@ -30,6 +30,7 @@
         <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
 
+
     <!-- Spring Boot MongoDB -->
     <dependency>
         <groupId>org.springframework.boot</groupId>
@@ -58,18 +59,47 @@
         <version>2.1.1</version>
     </dependency>
 
+    <!-- Validation API -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+    <!-- Java Mail for email sending -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
+    <!-- Thymeleaf for email templates -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+
+    <!-- Jakarta Mail (for MimeMessage, MessagingException) -->
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>jakarta.mail</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+    </dependencies>
+
+    <!-- ________________ -->
+
+    <!-- <dependency>
+        <groupId>net.bytebuddy</groupId>
+        <artifactId>byte-buddy</artifactId>
+        <version>1.15.6</version>
+        <scope>test</scope>
+    </dependency>
+
     <dependency>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-security</artifactId>
-</dependency>
-
-<!-- Spring Boot Starter Mail -->
-<dependency>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-mail</artifactId>
-</dependency>
-
-</dependencies>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>5.13.0</version>
+        <scope>test</scope>
+    </dependency> -->
 
 
     <build>
@@ -82,6 +112,15 @@
                     <mainClass>com.example.ces.CesCinemaApplication</mainClass>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version>
+                <configuration>
+                    <argLine>-Dnet.bytebuddy.experimental=true</argLine>
+                </configuration>
+                </plugin>
+
         </plugins>
     </build>
 </project>
